package com.github.lakicsdomi.expensetracker.model;

public enum Category {
}
